--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li><a href="#">Tools</a></li>
           <li><a href="#">Shop</a></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle">More<b class="caret"></b></a>
+            <a href="#" class="dropdown_toggle">More<b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><a href="#">Events</a></li>
               <li><a href="#">Blog</a></li>
