--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='http://fonts.googleapis.com/css?family=Oswald:400,300' rel='stylesheet'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    <link href="style.css" rel="stylesheet">
-    <title>Gardening Art</title>
+    <link href="css/style.css" rel="stylesheet">
+    <title>Gardening Art - contact</title>
   </head>
 
   <body>
-    <p>contact</p>
-  </body></html>
+    <header class="header">
+      <div class="container">
+        <a href="#" class="logo-icon">
+          <img src="Images/logo.png">
+        </a>
+
+        <ul class="menu">
+          <li><a href="#">Power of nature</a></li>
+          <li><a href="#">Magazines</a></li>
+          <li><a href="#">Tools</a></li>
+          <li><a href="#">Shop</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">More<b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Events</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Where to Find Us</a></li>
+              <li><a href="#">Offer</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </header>
+    
+    <div id="contact-form" class="container">    
+      <form class="form-horizontal">
+        <div class="form-group">
+          <label for="name" class="col-md-2 control-label">Name: </label>
+          <div class="col-md-4">
+            <input type="text" class="form-control" id="name" placeholder="Your name">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="lastName" class="col-md-2 control-label">Last name: </label>
+          <div class="col-md-4">
+            <input type="text" class="form-control" id="lastName" placeholder="Your last name">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="email" class="col-md-2 control-label">Email:</label>
+          <div class="col-md-10">
+            <input type="email" class="form-control" id="email" placeholder="Your email">
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-md-2 control-label">Your message:</label>
+          <div class="col-md-10">
+            <textarea class="form-control" rows="5" placeholder="Enter your message here"></textarea>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-md-10">
+            <button type="submit" class="btn btn-default">Send message</button>
+          </div>
+        </div>
+      </form>
+    </div>
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <script src="js/js.js"></script>
+  </body>
+</html>
