--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">More<b class="caret"></b></a>
             <ul class="dropdown-menu">
+              <li><a href="#">Offer</a></li>
               <li><a href="#">Events</a></li>
               <li><a href="#">Blog</a></li>
               <li><a href="#">About Us</a></li>
-              <li><a href="#">Where to Find Us</a></li>
-              <li><a href="#">Offer</a></li>
+              <li><a href="#">Contact</a></li>
             </ul>
           </li>
         </ul>
