--- a/index.html
+++ b/index.html
@@ -115,6 +115,11 @@
       </ul>
       <a href="#" class="arrow-next"><img src="Images/arrow-next.png"></a>
     </div> 
+    <footer class="footer">
+      <div class="container">
+        <span class="copyright">Copyright &copy; Gardening</span>
+      </div>
+    </footer>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script type="text/javascript" src="js/js.js"></script>
