--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='http://fonts.googleapis.com/css?family=Oswald:400,300' rel='stylesheet'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet">
     <title>Gardening Art - contact</title>
   </head>
@@ -36,7 +37,25 @@
       </div>
     </header>
     
-    <div id="contact-form" class="container">    
+    <div id="contact-form" class="container">
+      <h3 class="contact-header">Contact us</h3>
+      <p class="contact-info">
+        Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis.
+      </p>
+      <div class='social'>
+        <a href="https://www.facebook.com" target="_blank">
+          <i class='fa fa-facebook-square' title='Facebook'></i>
+        </a>
+        <a href="https://www.twitter.com" target="_blank">
+          <i class='fa fa-twitter-square' title='Twitter'></i>
+        </a>
+        <a href="https://plus.google.com" target="_blank">
+          <i class='fa fa-google-plus-square' title='Google Plus'></i>
+        </a>
+        <a href="https://www.youtube.com" target="_blank">
+          <i class='fa fa-youtube-square' title='YouTube'></i>
+        </a>
+      </div>
       <form class="form-horizontal">
         <div class="form-group">
           <label for="name" class="col-md-2 control-label">Name: </label>
@@ -69,10 +88,14 @@
         </div>
       </form>
     </div>
-
+    <footer class="footer">
+      <div class="container">
+        <span class="copyright">Copyright &copy; Gardening</span>
+      </div>
+    </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <script src="js/js.js"></script>
+    <script type="text/javascript" src="js/js.js"></script>
   </body>
 </html>
