Added about and magazine sites

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
   <body>
     <header class="header">
       <div class="container">
-        <a href="#" class="logo-icon">
+        <a href="index.html" class="logo-icon">
           <img src="Images/logo.png">
         </a>
 
         <ul class="menu">
           <li><a href="#">Power of nature</a></li>
-          <li><a href="#">Magazines</a></li>
+          <li><a href="magazines.html">Magazines</a></li>
           <li><a href="#">Tools</a></li>
           <li><a href="#">Shop</a></li>
           <li class="dropdown">
@@ -29,8 +29,8 @@
               <li><a href="#">Offer</a></li>
               <li><a href="#">Events</a></li>
               <li><a href="#">Blog</a></li>
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
           </li>
         </ul>
